Revert "Merge remote-tracking branch 'upstream/future/3.X' into Aura"
This reverts commit 8c895198484d0df9c61262f0b8c301bdf8ccd8df, reversing
changes made to 25b2336c175360075ce3d6d15e5456f27fd7cd61.