@@ -5,16 +5,13 @@ import cn.hutool.core.lang.tree.Tree;
 import cn.hutool.core.lang.tree.TreeNodeConfig;
 import cn.hutool.core.lang.tree.TreeUtil;
 import cn.hutool.core.lang.tree.parser.NodeParser;
-import cn.hutool.core.util.StrUtil;
 import lombok.AccessLevel;
 import lombok.NoArgsConstructor;
 import org.dromara.common.core.utils.reflect.ReflectUtils;
 
-import java.util.LinkedHashMap;
 import java.util.List;
-import java.util.Map;
+import java.util.Objects;
 import java.util.Set;
-import java.util.function.BiConsumer;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
@@ -33,23 +30,6 @@ public class TreeBuildUtils extends TreeUtil {
     public static final TreeNodeConfig DEFAULT_CONFIG = TreeNodeConfig.DEFAULT_CONFIG.setNameKey("label");
 
     /**
-     * 使用动态规划构建树形结构
-     *
-     * @param items      节点列表项
-     * @param parentId   父节点ID
-     * @param classifier 动态规划表分类函数
-     * @param action     回溯动作
-     * @param <K>        节点ID的类型
-     * @param <T>        输入节点的类型
-     * @return 构建好的树形结构列表
-     */
-    public static <K, T> List<T> build(List<T> items, K parentId, Function<T, K> classifier, BiConsumer<T, Map<K, List<T>>> action) {
-        Map<K, List<T>> nodeTreeMaps = items.stream().collect(Collectors.groupingBy(classifier));
-        items.forEach(item -> action.accept(item, nodeTreeMaps));
-        return nodeTreeMaps.get(parentId);
-    }
-
-    /**
      * 构建树形结构
      *
      * @param <T>        输入节点的类型
@@ -62,7 +42,7 @@ public class TreeBuildUtils extends TreeUtil {
         if (CollUtil.isEmpty(list)) {
             return CollUtil.newArrayList();
         }
-        K k = ReflectUtils.invokeGetter(list.getFirst(), "parentId");
+        K k = ReflectUtils.invokeGetter(list.get(0), "parentId");
         return TreeUtil.build(list, k, DEFAULT_CONFIG, nodeParser);
     }
 
@@ -99,8 +79,17 @@ public class TreeBuildUtils extends TreeUtil {
             return CollUtil.newArrayList();
         }
 
-        Set<K> rootParentIds = StreamUtils.toSet(list, getParentId);
-        rootParentIds.removeAll(StreamUtils.toSet(list, getId));
+        // 提取所有节点 ID，用于后续判断哪些节点为根节点（即 parentId 不在其中）
+        Set<K> allIds = StreamUtils.toSet(list, getId);
+
+        // 筛选出所有 parentId 不在 allIds 中的节点，这些节点的 parentId 可认为是根节点
+        Set<K> rootParentIds = list.stream()
+            .map(getParentId)
+            .filter(Objects::nonNull)
+            .filter(pid -> !allIds.contains(pid))
+            .collect(Collectors.toSet());
+
+        // 使用流处理，遍历每个顶级 parentId，构建对应树，并合并为一个列表返回
         return rootParentIds.stream()
             .flatMap(rootParentId -> TreeUtil.build(list, rootParentId, parser).stream())
             .collect(Collectors.toList());
@@ -123,20 +112,6 @@ public class TreeBuildUtils extends TreeUtil {
     }
 
     /**
-     * 构建树节点路径 Map: 路径为 key, 节点为 value
-     *
-     * @param trees       树结构
-     * @param joiner      拼接符
-     * @param fieldGetter 路径拼接字段
-     * @return Map<拼接路径, 原始Tree节点>
-     */
-    public static <K> Map<String, Tree<K>> buildTreeNodeMap(List<Tree<K>> trees, String joiner, Function<Tree<K>, CharSequence> fieldGetter) {
-        Map<String, Tree<K>> nodeMap = new LinkedHashMap<>();
-        doBuildTreeNodeMap(trees, "", joiner, fieldGetter, nodeMap);
-        return nodeMap;
-    }
-
-    /**
      * 获取指定节点下的所有叶子节点
      *
      * @param <K>  节点ID的类型
@@ -150,22 +125,6 @@ public class TreeBuildUtils extends TreeUtil {
             // 递归调用，获取所有子节点的叶子节点
             return node.getChildren().stream()
                 .flatMap(TreeBuildUtils::extractLeafNodes);
-        }
-    }
-
-    private static <K> void doBuildTreeNodeMap(List<Tree<K>> trees, String parentPath, String joiner,
-                                               Function<Tree<K>, CharSequence> fieldGetter, Map<String, Tree<K>> nodeMap) {
-        if (CollUtil.isEmpty(trees)) {
-            return;
-        }
-        for (Tree<K> tree : trees) {
-            CharSequence field = fieldGetter.apply(tree);
-            if (StrUtil.isEmpty(field)) {
-                continue;
-            }
-            String currentPath = StrUtil.isEmpty(parentPath) ? field.toString() : parentPath + joiner + field;
-            nodeMap.put(currentPath, tree);
-            doBuildTreeNodeMap(tree.getChildren(), currentPath, joiner, fieldGetter, nodeMap);
         }
     }
 
