@@ -3,10 +3,10 @@ package org.dromara.common.excel.core;
 import cn.hutool.core.collection.CollUtil;
 import cn.hutool.core.util.ReflectUtil;
 import cn.hutool.core.util.StrUtil;
+import cn.idev.excel.annotation.ExcelIgnore;
+import cn.idev.excel.annotation.ExcelIgnoreUnannotated;
+import cn.idev.excel.annotation.ExcelProperty;
 import lombok.SneakyThrows;
-import org.apache.fesod.sheet.annotation.ExcelIgnore;
-import org.apache.fesod.sheet.annotation.ExcelIgnoreUnannotated;
-import org.apache.fesod.sheet.annotation.ExcelProperty;
 import org.apache.poi.ss.util.CellRangeAddress;
 import org.dromara.common.core.utils.reflect.ReflectUtils;
 import org.dromara.common.excel.annotation.CellMerge;
@@ -29,18 +29,10 @@ public class CellMergeHandler {
         // 行合并开始下标
         this.rowIndex = hasTitle ? 1 : 0;
     }
-
     private CellMergeHandler(final boolean hasTitle, final int rowIndex) {
         this.hasTitle = hasTitle;
         this.rowIndex = hasTitle ? rowIndex : 0;
     }
-
-    /**
-     * 计算需要合并的单元格区域。
-     *
-     * @param rows 数据行
-     * @return 单元格合并区域列表
-     */
     @SneakyThrows
     public List<CellRangeAddress> handle(List<?> rows) {
         // 如果入参为空集合则返回空集
@@ -49,7 +41,7 @@ public class CellMergeHandler {
         }
 
         // 获取有合并注解的字段
-        Map<Field, FieldColumnIndex> mergeFields = getFieldColumnIndexMap(rows.getFirst().getClass());
+        Map<Field, FieldColumnIndex> mergeFields = getFieldColumnIndexMap(rows.get(0).getClass());
         // 如果没有需要合并的字段则返回空集
         if (CollUtil.isEmpty(mergeFields)) {
             return Collections.emptyList();
@@ -130,14 +122,11 @@ public class CellMergeHandler {
                 continue;
             }
             CellMerge cm = field.getAnnotation(CellMerge.class);
-            ExcelProperty property = field.getAnnotation(ExcelProperty.class);
-            int index = cm.index();
-            if (index == -1) {
-                index = property != null && property.index() != -1 ? property.index() : i;
-            }
+            int index = cm.index() == -1 ? i : cm.index();
             mergeFields.put(field, FieldColumnIndex.of(index, cm));
 
-            if (hasTitle && property != null && property.value().length > 0) {
+            if (hasTitle) {
+                ExcelProperty property = field.getAnnotation(ExcelProperty.class);
                 rowIndex = Math.max(rowIndex, property.value().length);
             }
         }
@@ -188,7 +177,6 @@ public class CellMergeHandler {
             return new FieldColumnIndex(colIndex, cellMerge);
         }
     }
-
     /**
      * 创建一个单元格合并处理器实例
      *
