@@ -6,16 +6,15 @@ import cn.hutool.core.util.ArrayUtil;
 import cn.hutool.core.util.EnumUtil;
 import cn.hutool.core.util.ObjectUtil;
 import cn.hutool.core.util.StrUtil;
+import cn.idev.excel.metadata.FieldCache;
+import cn.idev.excel.metadata.FieldWrapper;
+import cn.idev.excel.util.ClassUtils;
+import cn.idev.excel.write.handler.SheetWriteHandler;
+import cn.idev.excel.write.metadata.holder.WriteSheetHolder;
+import cn.idev.excel.write.metadata.holder.WriteWorkbookHolder;
 import lombok.extern.slf4j.Slf4j;
-import org.apache.fesod.sheet.metadata.FieldCache;
-import org.apache.fesod.sheet.metadata.FieldWrapper;
-import org.apache.fesod.sheet.util.ClassUtils;
-import org.apache.fesod.sheet.write.handler.SheetWriteHandler;
-import org.apache.fesod.sheet.write.metadata.holder.WriteSheetHolder;
-import org.apache.fesod.sheet.write.metadata.holder.WriteWorkbookHolder;
 import org.apache.poi.ss.usermodel.*;
 import org.apache.poi.ss.util.CellRangeAddressList;
-import org.apache.poi.ss.util.CellReference;
 import org.apache.poi.ss.util.WorkbookUtil;
 import org.apache.poi.xssf.usermodel.XSSFDataValidation;
 import org.dromara.common.core.exception.ServiceException;
@@ -41,8 +40,11 @@ import java.util.*;
 @Slf4j
 public class ExcelDownHandler implements SheetWriteHandler {
 
-    private static final int FIRST_DATA_ROW_INDEX = 1;
-    private static final int LAST_DATA_ROW_INDEX = 1000;
+    /**
+     * Excel表格中的列名英文
+     * 仅为了解析列英文，禁止修改
+     */
+    private static final String EXCEL_COLUMN_NAME = "ABCDEFGHIJKLMNOPQRSTUVWXYZ";
     /**
      * 单选数据Sheet名
      */
@@ -55,7 +57,7 @@ public class ExcelDownHandler implements SheetWriteHandler {
      * 下拉可选项
      */
     private final List<DropDownOptions> dropDownOptions;
-    private DictService dictService;
+    private final DictService dictService;
     /**
      * 当前单选进度
      */
@@ -65,15 +67,11 @@ public class ExcelDownHandler implements SheetWriteHandler {
      */
     private int currentLinkedOptionsSheetIndex;
 
-    /**
-     * 构造 Excel 下拉选处理器。
-     *
-     * @param options 外部指定的下拉选项
-     */
     public ExcelDownHandler(List<DropDownOptions> options) {
         this.dropDownOptions = options;
         this.currentOptionsColumnIndex = 0;
         this.currentLinkedOptionsSheetIndex = 0;
+        this.dictService = SpringUtils.getBean(DictService.class);
     }
 
     /**
@@ -81,7 +79,7 @@ public class ExcelDownHandler implements SheetWriteHandler {
      * 1.通过解析传入的@ExcelProperty同级是否标注有@DropDown选项
      * 如果有且设置了value值，则将其直接置为下拉可选项
      * <p>
-     * 2.或者在调用ExcelBuilder时指定了可选项，将依据传入的可选项做下拉
+     * 2.或者在调用ExcelUtil时指定了可选项，将依据传入的可选项做下拉
      * <p>
      * 3.二者并存，注意调用方式
      */
@@ -106,20 +104,14 @@ public class ExcelDownHandler implements SheetWriteHandler {
                 String converterExp = format.readConverterExp();
                 if (StringUtils.isNotBlank(dictType)) {
                     // 如果传递了字典名，则依据字典建立下拉
-                    Collection<String> values = Optional.ofNullable(getDictService().getAllDictByDictType(dictType))
+                    Collection<String> values = Optional.ofNullable(dictService.getAllDictByDictType(dictType))
                         .orElseThrow(() -> new ServiceException("字典 {} 不存在", dictType))
                         .values();
                     options = new ArrayList<>(values);
                 } else if (StringUtils.isNotBlank(converterExp)) {
                     // 如果指定了确切的值，则直接解析确切的值
-                    List<String> strList = StringUtils.splitList(converterExp, StringUtils.SEPARATOR);
-                    options = StreamUtils.toList(strList, s -> {
-                        String[] itemArray = s.split("=", 2);
-                        if (itemArray.length != 2) {
-                            throw new ServiceException("Excel转换表达式格式错误: {}", s);
-                        }
-                        return itemArray[1];
-                    });
+                    List<String> strList = StringUtils.splitList(converterExp, format.separator());
+                    options = StreamUtils.toList(strList, s -> StringUtils.split(s, "=")[1]);
                 }
             } else if (field.isAnnotationPresent(ExcelEnumFormat.class)) {
                 // 否则如果指定了@ExcelEnumFormat，则使用枚举的逻辑
@@ -153,10 +145,10 @@ public class ExcelDownHandler implements SheetWriteHandler {
         }
         dropDownOptions.forEach(everyOptions -> {
             // 如果传递了下拉框选择器参数
-            if (CollUtil.isNotEmpty(everyOptions.getNextOptions())) {
+            if (!everyOptions.getNextOptions().isEmpty()) {
                 // 当二级选项不为空时，使用额外关联表的形式
                 dropDownLinkedOptions(helper, workbook, sheet, everyOptions);
-            } else if (CollUtil.isNotEmpty(everyOptions.getOptions()) && everyOptions.getOptions().size() > 10) {
+            } else if (everyOptions.getOptions().size() > 10) {
                 // 当一级选项参数个数大于10，使用额外表的形式
                 dropDownWithSheet(helper, workbook, sheet, everyOptions.getIndex(), everyOptions.getOptions());
             } else {
@@ -191,14 +183,9 @@ public class ExcelDownHandler implements SheetWriteHandler {
         Sheet linkedOptionsDataSheet = workbook.createSheet(WorkbookUtil.createSafeSheetName(linkedOptionsSheetName));
         // 将下拉表隐藏
         workbook.setSheetHidden(workbook.getSheetIndex(linkedOptionsDataSheet), true);
-        // 选项数据（使用副本，避免修改调用方的原始数据）
+        // 选项数据
         List<String> firstOptions = options.getOptions();
-        if (CollUtil.isEmpty(firstOptions)) {
-            return;
-        }
-        validateLinkedOptionNames(firstOptions);
-        Map<String, List<String>> secoundOptionsMap = new HashMap<>();
-        options.getNextOptions().forEach((k, v) -> secoundOptionsMap.put(k, new ArrayList<>(v)));
+        Map<String, List<String>> secoundOptionsMap = options.getNextOptions();
 
         // 采用按行填充数据的方式，避免出现数据无法写入的问题
         // Attempting to write a row in the range that is already written to disk
@@ -222,7 +209,7 @@ public class ExcelDownHandler implements SheetWriteHandler {
         String firstOptionsFunction = String.format("%s!$%s$1:$%s$1",
             linkedOptionsSheetName,
             getExcelColumnName(0),
-            getExcelColumnName(firstOptions.size() - 1)
+            getExcelColumnName(firstOptions.size())
         );
         // 设置名称管理器的引用位置
         name.setRefersToFormula(firstOptionsFunction);
@@ -254,7 +241,7 @@ public class ExcelDownHandler implements SheetWriteHandler {
             // 数据验证为序列模式，引用到每一个主表中的二级选项位置
             // 创建子项的名称管理器，只是为了使得Excel可以识别到数据
             String mainSheetFirstOptionsColumnName = getExcelColumnName(options.getIndex());
-            for (int i = FIRST_DATA_ROW_INDEX; i <= LAST_DATA_ROW_INDEX; i++) {
+            for (int i = 0; i < 100; i++) {
                 // 以一级选项对应的主体所在位置创建二级下拉
                 String secondOptionsFunction = String.format("=INDIRECT(%s%d)", mainSheetFirstOptionsColumnName, i + 1);
                 // 二级只能主表每一行的每一列添加二级校验
@@ -276,10 +263,10 @@ public class ExcelDownHandler implements SheetWriteHandler {
                     continue;
                 }
                 // 取第一个
-                String str = data.getFirst();
+                String str = data.get(0);
                 rowData.add(str);
                 // 通过移除的方式避免重复
-                data.removeFirst();
+                data.remove(0);
                 // 设置可以继续
                 flag = true;
             }
@@ -306,19 +293,6 @@ public class ExcelDownHandler implements SheetWriteHandler {
         });
 
         currentLinkedOptionsSheetIndex++;
-    }
-
-    /**
-     * 校验级联下拉一级选项可作为 Excel 名称，且不能重复。
-     */
-    private void validateLinkedOptionNames(List<String> firstOptions) {
-        Set<String> names = new HashSet<>();
-        for (String firstOption : firstOptions) {
-            DropDownOptions.validateOptionValue(firstOption);
-            if (!names.add(firstOption)) {
-                throw new ServiceException("级联下拉一级选项重复：" + firstOption);
-            }
-        }
     }
 
     /**
@@ -373,7 +347,7 @@ public class ExcelDownHandler implements SheetWriteHandler {
     private void markOptionsToSheet(DataValidationHelper helper, Sheet sheet, Integer celIndex,
                                     DataValidationConstraint constraint) {
         // 设置数据有效性加载在哪个单元格上,四个参数分别是：起始行、终止行、起始列、终止列
-        CellRangeAddressList addressList = new CellRangeAddressList(FIRST_DATA_ROW_INDEX, LAST_DATA_ROW_INDEX, celIndex, celIndex);
+        CellRangeAddressList addressList = new CellRangeAddressList(1, 1000, celIndex, celIndex);
         markDataValidationToSheet(helper, sheet, constraint, addressList);
     }
 
@@ -405,6 +379,7 @@ public class ExcelDownHandler implements SheetWriteHandler {
             //选定提示
             dataValidation.createPromptBox("填写说明：", "填写内容只能为下拉中数据，其他数据将导致导入失败");
             dataValidation.setShowPromptBox(true);
+            sheet.addValidationData(dataValidation);
         } else {
             dataValidation.setSuppressDropDownArrow(false);
         }
@@ -422,13 +397,17 @@ public class ExcelDownHandler implements SheetWriteHandler {
      * @return 列index所在得英文名
      */
     private String getExcelColumnName(int columnIndex) {
-        return CellReference.convertNumToColString(columnIndex);
-    }
-
-    private DictService getDictService() {
-        if (dictService == null) {
-            dictService = SpringUtils.getBean(DictService.class);
-        }
-        return dictService;
+        // 26一循环的次数
+        int columnCircleCount = columnIndex / 26;
+        // 26一循环内的位置
+        int thisCircleColumnIndex = columnIndex % 26;
+        // 26一循环的次数大于0，则视为栏名至少两位
+        String columnPrefix = columnCircleCount == 0
+            ? StrUtil.EMPTY
+            : StrUtil.subWithLength(EXCEL_COLUMN_NAME, columnCircleCount - 1, 1);
+        // 从26一循环内取对应的栏位名
+        String columnNext = StrUtil.subWithLength(EXCEL_COLUMN_NAME, thisCircleColumnIndex, 1);
+        // 将二者拼接即为最终的栏位名
+        return columnPrefix + columnNext;
     }
 }
